--- a/formghost-site/support.html
+++ b/formghost-site/support.html
@@ -6,159 +6,177 @@
   <meta name="description" content="FormGhost Support - Frequently asked questions and help documentation.">
   <title>Support - FormGhost</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
   <header>
     <div class="header-container">
       <a href="/" class="logo">
-        <span class="logo-icon">👻</span>
+        <div class="logo-ghost">
+          <span class="ghost-icon">&#128123;</span>
+        </div>
         <span>FormGhost</span>
       </a>
       <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html#how-it-works">How It Works</a>
+        <a href="index.html#features">Features</a>
         <a href="support.html">Support</a>
         <a href="privacy.html">Privacy</a>
       </nav>
+      <a href="#" class="nav-cta">Get Extension</a>
     </div>
   </header>
 
-  <!-- FAQ Section -->
-  <section class="faq">
+  <!-- Page Header -->
+  <section class="page-header">
     <div class="section-container">
-      <h2>Frequently Asked Questions</h2>
-
-      <div class="faq-list">
-        <div class="faq-item">
-          <h3 class="faq-question">How does FormGhost work?</h3>
-          <p class="faq-answer">
-            FormGhost uses AI to intelligently match your saved data to form fields on any website. When you click "Fill Form," it scans the current page for form fields, analyzes their labels and context, and fills them with the appropriate information from your saved profile. The AI can understand variations in field naming (like "First Name" vs "Given Name") and works on forms you've never encountered before.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">Is my data safe and private?</h3>
-          <p class="faq-answer">
-            Absolutely. Your personal information is stored locally in your browser using Chrome's secure storage API and never uploaded to any server. When FormGhost uses AI to match fields, it only sends the field <strong>labels</strong> (like "Email Address" or "Phone Number")—never your actual personal data. This means your name, email, address, and other sensitive information stays 100% on your computer.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">What counts as an "AI fill"?</h3>
-          <p class="faq-answer">
-            An "AI fill" is used each time FormGhost successfully fills a form using AI-powered field matching. If you fill the same form multiple times (like submitting several insurance applications on the same website), each submission counts as one AI fill. However, if FormGhost can use direct replay (on forms it recognizes), it won't use your AI fill quota.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">Why didn't FormGhost fill a field correctly?</h3>
-          <p class="faq-answer">
-            There are a few common reasons:
-          </p>
-          <ul class="faq-answer">
-            <li><strong>Missing data:</strong> You may not have that information saved in your profile. Check your saved data and add any missing fields.</li>
-            <li><strong>Unusual field name:</strong> Some forms use non-standard labels that the AI may not recognize. You can manually fill these fields.</li>
-            <li><strong>Special formatting:</strong> Fields requiring specific formats (like phone numbers with extensions) may need manual adjustment.</li>
-            <li><strong>Dynamic forms:</strong> Some websites use JavaScript to dynamically load fields, which may require a page refresh before filling.</li>
-          </ul>
-          <p class="faq-answer">
-            FormGhost will show you any unmatched fields so you know what needs manual attention.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">How do I edit my saved data?</h3>
-          <p class="faq-answer">
-            Click the FormGhost extension icon in your Chrome toolbar, then navigate to the "Clients" page. From there, you can:
-          </p>
-          <ul class="faq-answer">
-            <li>Edit existing profiles by clicking the edit icon next to any saved client</li>
-            <li>Add new profiles with the "Add Client" button</li>
-            <li>Delete profiles you no longer need</li>
-            <li>Import/export client data using CSV files</li>
-          </ul>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">When does my monthly limit reset?</h3>
-          <p class="faq-answer">
-            Your 50 free AI fills reset automatically on the 1st of each month at 12:00 AM (your local time). You can check your current usage count in the extension's settings page. If you need more than 50 fills per month, consider upgrading to FormGhost Pro for unlimited AI fills.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">Can I use FormGhost on multiple computers?</h3>
-          <p class="faq-answer">
-            Yes, but your saved data is stored locally in each browser. If you want to use the same data on multiple computers, you can export your client data as a CSV file from one computer and import it on another. This is also a great way to back up your data.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">Does FormGhost work on all websites?</h3>
-          <p class="faq-answer">
-            FormGhost works on the vast majority of web forms, including insurance applications, booking forms, registration pages, and more. However, it cannot work on:
-          </p>
-          <ul class="faq-answer">
-            <li>Chrome system pages (like chrome://settings)</li>
-            <li>Some highly secure banking/financial pages that block extensions</li>
-            <li>Forms that require manual CAPTCHA verification (you'll still need to complete those yourself)</li>
-          </ul>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">What browser is FormGhost available for?</h3>
-          <p class="faq-answer">
-            Currently, FormGhost is available exclusively for Google Chrome and Chromium-based browsers (like Microsoft Edge, Brave, and Opera). Support for Firefox and Safari may be added in the future.
-          </p>
-        </div>
-
-        <div class="faq-item">
-          <h3 class="faq-question">Is there a way to get unlimited AI fills?</h3>
-          <p class="faq-answer">
-            Yes! FormGhost Pro offers unlimited AI fills along with additional features. Keep an eye on the extension for upgrade options, or contact us at <a href="mailto:support@formghost.app">support@formghost.app</a> for early access.
-          </p>
-        </div>
-      </div>
+      <span class="section-tag">Help Center</span>
+      <h1>Frequently Asked Questions</h1>
+      <p class="subtitle" style="max-width: 600px; margin: 1rem auto 0;">
+        Got questions? We've got answers. If you can't find what you're looking for, just drop us an email.
+      </p>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section class="contact">
-    <div class="section-container">
-      <h2>Still Need Help?</h2>
-      <div class="contact-box">
-        <p>Can't find the answer you're looking for? We're here to help.</p>
-        <p style="margin-top: 1.5rem;">
-          Email us at <a href="mailto:support@formghost.app" class="contact-email">support@formghost.app</a>
-        </p>
-        <p style="margin-top: 1rem; font-size: 0.875rem; color: var(--text-secondary);">
-          We typically respond within 24 hours on business days.
+  <!-- FAQ Section -->
+  <section class="page-content">
+    <div class="faq-list">
+      <div class="faq-item">
+        <h3 class="faq-question">How does FormGhost actually work?</h3>
+        <p class="faq-answer">
+          When you click "Fill Form," FormGhost scans the page for form fields, sends just the field <strong>labels</strong> (like "First Name" or "Email") to our AI, and the AI figures out which of your saved data goes where. Then it fills everything in automatically. The magic is that it works on forms you've never seen before - no pre-programming needed.
         </p>
       </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">Wait, is my data really safe?</h3>
+        <p class="faq-answer">
+          Yes, and here's exactly why: Your personal data (names, addresses, emails, etc.) is stored <strong>only</strong> in your browser using Chrome's secure local storage. When we use AI to match fields, we only send the field labels - never your actual data. So we literally cannot see your information even if we wanted to. Your data never leaves your computer.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">What counts as an "AI fill"?</h3>
+        <p class="faq-answer">
+          One AI fill = one time you click the FormGhost button and it successfully fills a form. If you fill the same type of form 10 times for 10 different clients, that's 10 AI fills. The counter resets on the 1st of each month.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">Why didn't FormGhost fill a field correctly?</h3>
+        <p class="faq-answer">
+          A few common reasons:
+        </p>
+        <ul class="faq-answer">
+          <li><strong>Missing data:</strong> You might not have that info saved in your profile yet.</li>
+          <li><strong>Weird field name:</strong> Some forms use unusual labels that confuse the AI.</li>
+          <li><strong>Dynamic forms:</strong> Some sites load fields with JavaScript after the page loads - try refreshing first.</li>
+        </ul>
+        <p class="faq-answer">
+          FormGhost will show you which fields it couldn't fill so you know exactly what needs manual attention.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">How do I add or edit my saved data?</h3>
+        <p class="faq-answer">
+          Click the FormGhost icon in your Chrome toolbar, then go to "Clients." From there you can add new profiles, edit existing ones, delete old ones, or import/export data via CSV files.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">When does my monthly limit reset?</h3>
+        <p class="faq-answer">
+          Your 50 free AI fills reset automatically on the 1st of each month at midnight (your local time). You can check your current usage in the extension popup.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">Can I use FormGhost on multiple computers?</h3>
+        <p class="faq-answer">
+          Yes! But since your data is stored locally in each browser, you'll need to export your data from one computer (as a CSV) and import it on the other. This is also a great way to back up your data.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">Does FormGhost work on all websites?</h3>
+        <p class="faq-answer">
+          It works on the vast majority of web forms. However, it can't work on:
+        </p>
+        <ul class="faq-answer">
+          <li>Chrome system pages (like chrome://settings)</li>
+          <li>Some banking sites that block all extensions</li>
+          <li>CAPTCHA fields (you'll still need to do those yourself)</li>
+        </ul>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">What browsers does FormGhost support?</h3>
+        <p class="faq-answer">
+          Currently just Chrome and Chromium-based browsers (Edge, Brave, Opera, Arc). Firefox and Safari support may come later.
+        </p>
+      </div>
+
+      <div class="faq-item">
+        <h3 class="faq-question">What if I need more than 50 fills per month?</h3>
+        <p class="faq-answer">
+          FormGhost Pro with unlimited fills is coming soon. In the meantime, if you're hitting the limit regularly, shoot us an email and we'll see what we can do.
+        </p>
+      </div>
+    </div>
+
+    <!-- Contact Section -->
+    <div class="contact-box">
+      <h2 style="font-size: 1.5rem; margin-bottom: 0.5rem;">Still stuck?</h2>
+      <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
+        We're actual humans and we reply to every email.
+      </p>
+      <a href="mailto:support@formghost.app" class="contact-email">support@formghost.app</a>
+      <p style="margin-top: 1rem; font-size: 0.85rem; color: var(--text-muted);">
+        We typically respond within 24 hours on business days.
+      </p>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
     <div class="footer-container">
-      <div class="footer-section">
-        <h4>FormGhost</h4>
-        <p>AI-powered form filling for professionals who value their time and privacy.</p>
+      <div class="footer-main">
+        <div class="footer-brand">
+          <a href="/" class="logo">
+            <div class="logo-ghost">
+              <span class="ghost-icon">&#128123;</span>
+            </div>
+            <span>FormGhost</span>
+          </a>
+          <p>AI-powered form filling that respects your privacy and your time.</p>
+        </div>
+        <div class="footer-links">
+          <div class="footer-section">
+            <h4>Product</h4>
+            <a href="index.html#features">Features</a>
+            <a href="index.html#how-it-works">How It Works</a>
+            <a href="#">Chrome Web Store</a>
+          </div>
+          <div class="footer-section">
+            <h4>Support</h4>
+            <a href="support.html">FAQ</a>
+            <a href="mailto:support@formghost.app">Contact</a>
+          </div>
+          <div class="footer-section">
+            <h4>Legal</h4>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="privacy.html#data">Your Data</a>
+          </div>
+        </div>
       </div>
-      <div class="footer-section">
-        <h4>Product</h4>
-        <a href="index.html#features">Features</a>
-        <a href="support.html">Support</a>
-        <a href="privacy.html">Privacy Policy</a>
+      <div class="footer-bottom">
+        <p>&copy; 2025 FormGhost. All rights reserved.</p>
+        <p class="footer-tagline">Made for humans who are tired of acting like robots.</p>
       </div>
-      <div class="footer-section">
-        <h4>Company</h4>
-        <a href="mailto:support@formghost.app">Contact Us</a>
-        <a href="#">Chrome Web Store</a>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2025 FormGhost. All rights reserved.</p>
     </div>
   </footer>
 </body>
