--- a/formghost-site/index.html
+++ b/formghost-site/index.html
@@ -22,7 +22,7 @@
       </a>
       <nav>
         <a href="#how-it-works">How It Works</a>
-        <a href="#features">Features</a>
+        <a href="features.html">Features</a>
         <a href="support.html">Support</a>
         <a href="privacy.html">Privacy</a>
       </nav>
@@ -335,7 +335,7 @@
         <div class="footer-links">
           <div class="footer-section">
             <h4>Product</h4>
-            <a href="#features">Features</a>
+            <a href="features.html">Features</a>
             <a href="#how-it-works">How It Works</a>
             <a href="#">Chrome Web Store</a>
           </div>
